--- a/templates/chat/roll-result/resistance.hbs
+++ b/templates/chat/roll-result/resistance.hbs
@@ -1,6 +1,6 @@
 {{eLog "RESISTANCE ROLL CHAT CONTEXT" this}}
 
-<div class="blades-roll roll-type-{{case "lower" rollType}}">
+<div id="{{rollData.id}}" class="blades-roll inline-roll roll-type-{{case "lower" rollType}}">
 
   <div class="chat-message-bg"></div>
 
