--- a/templates/components/consequence.hbs
+++ b/templates/components/consequence.hbs
@@ -172,9 +172,9 @@
     <label class="consequence-footer-message consequence-special-message special-consequence">Resist with Armor</label>
     {{/if}}
 
-    {{#if specialTo}}{{#if specialTo.footerMsg}}
+    {{#if specialTo}}{{#if specialTo.specialFooterMsg}}
     <div class="consequence-footer-bg special-consequence"></div>
-    <label class="consequence-footer-message consequence-special-message special-consequence">{{specialTo.footerMsg}}</label>
+    <label class="consequence-footer-message consequence-special-message special-consequence">{{specialTo.specialFooterMsg}}</label>
     {{/if}}{{/if}}
 
   </div>
