--- a/templates/parts/dialog-consequence-block.hbs
+++ b/templates/parts/dialog-consequence-block.hbs
@@ -89,7 +89,7 @@
                   inactiveClass="fa-sharp fa-regular fa-shield-quartered"
                 }}
                 {{!-- Special Armor Footer Message --}}
-                <input class="shadowed consequence-footer" type="text" value="{{cData.name}}" data-action="gm-update-dialog" data-flag-target="rollCollab.consequenceData.{{../rollPosition}}.{{../rollResult}}.{{cData.id}}.footerMsg" />
+                <input class="shadowed consequence-footer" type="text" value="{{cData.name}}" data-action="gm-update-dialog" data-flag-target="rollCollab.consequenceData.{{../rollPosition}}.{{../rollResult}}.{{cData.id}}.specialFooterMsg" />
               {{/if}}
             {{/if}}
             {{!-- Name --}}
