--- a/scss/chat/_chat.scss
+++ b/scss/chat/_chat.scss
@@ -32,7 +32,7 @@
   }
 }
 
-.chat-message:not(.display-ok) { visibility: hidden; }
+.chat-message { visibility: hidden; }
 
 .chat-message[class*="-roll"] {
 
