Slight detour to get tooltips working

--- a/templates/roll/roll-collab-action-gm.hbs
+++ b/templates/roll/roll-collab-action-gm.hbs
@@ -1,4 +1,4 @@
-<header class="window-header flexrow draggable resizable">
+<header class="window-header flexrow dragger">
   <h4 class="window-title">Action Roll</h4>
   <a class="header-button control close">
       <i class="fas fa-times"></i>Close
@@ -95,25 +95,13 @@
               <div class="roll-sheet-sub-block roll-effects-block gm-effects-block flex-horizontal">
                 {{#each posRollMods.roll }}
                   {{#unless isInInactiveBlock}}
-                    {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-                      status=status
-                      sideString=sideString
-                      tooltip=tooltip
-                      selectOptions=selectOptions
-                      isGM=@root.isGM
-                    }}
+                    {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                   {{/unless}}
                 {{/each}}
                 <span class="roll-mod-block-spacer mid-spacer"></span>
                 {{#each negRollMods.roll }}
                   {{#unless isInInactiveBlock}}
-                    {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-                      status=status
-                      sideString=sideString
-                      tooltip=tooltip
-                      selectOptions=selectOptions
-                      isGM=@root.isGM
-                    }}
+                    {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                   {{/unless}}
                 {{/each}}
               </div>
@@ -121,24 +109,12 @@
                 <div class="roll-sheet-sub-block roll-effects-block gm-effects-block inactive-mod-block flex-vertical">
                   {{#each posRollMods.roll }}
                     {{#if isInInactiveBlock}}
-                      {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-                        status=status
-                        sideString=sideString
-                        tooltip=tooltip
-                        selectOptions=selectOptions
-                        isGM=@root.isGM
-                      }}
+                      {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                     {{/if}}
                   {{/each}}
                   {{#each negRollMods.roll }}
                     {{#if isInInactiveBlock}}
-                      {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-                        status=status
-                        sideString=sideString
-                        tooltip=tooltip
-                        selectOptions=selectOptions
-                        isGM=@root.isGM
-                      }}
+                      {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                     {{/if}}
                   {{/each}}
                 </div>
@@ -165,15 +141,13 @@
               <div class="roll-sheet-sub-block roll-effects-block gm-effects-block flex-horizontal">
                 {{#each posRollMods.position }}
                 {{#unless isInInactiveBlock}}
-                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-                tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                 {{/unless}}
                 {{/each}}
                 <span class="roll-mod-block-spacer mid-spacer"></span>
                 {{#each negRollMods.position }}
                 {{#unless isInInactiveBlock}}
-                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-                tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                 {{/unless}}
                 {{/each}}
               </div>
@@ -181,14 +155,12 @@
               <div class="roll-sheet-sub-block roll-effects-block gm-effects-block inactive-mod-block flex-vertical">
                 {{#each posRollMods.position }}
                 {{#if isInInactiveBlock}}
-                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-                tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                 {{/if}}
                 {{/each}}
                 {{#each negRollMods.position }}
                 {{#if isInInactiveBlock}}
-                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-                tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                 {{/if}}
                 {{/each}}
               </div>
@@ -217,15 +189,13 @@
               <div class="roll-sheet-sub-block roll-effects-block gm-effects-block flex-horizontal">
                 {{#each posRollMods.effect }}
                 {{#unless isInInactiveBlock}}
-                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-                tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                 {{/unless}}
                 {{/each}}
                 <span class="roll-mod-block-spacer mid-spacer"></span>
                 {{#each negRollMods.effect }}
                 {{#unless isInInactiveBlock}}
-                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-                tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                 {{/unless}}
                 {{/each}}
               </div>
@@ -233,14 +203,12 @@
               <div class="roll-sheet-sub-block roll-effects-block gm-effects-block inactive-mod-block flex-vertical">
                 {{#each posRollMods.effect }}
                 {{#if isInInactiveBlock}}
-                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-                tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                 {{/if}}
                 {{/each}}
                 {{#each negRollMods.effect }}
                 {{#if isInInactiveBlock}}
-                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-                tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                 {{/if}}
                 {{/each}}
               </div>
@@ -256,15 +224,13 @@
               <div class="roll-sheet-sub-block roll-effects-block gm-effects-block flex-horizontal">
                 {{#each posRollMods.result }}
                 {{#unless isInInactiveBlock}}
-                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-                tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                 {{/unless}}
                 {{/each}}
                 <span class="roll-mod-block-spacer mid-spacer"></span>
                 {{#each negRollMods.result }}
                 {{#unless isInInactiveBlock}}
-                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-                tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                 {{/unless}}
                 {{/each}}
               </div>
@@ -272,14 +238,12 @@
               <div class="roll-sheet-sub-block roll-effects-block gm-effects-block inactive-mod-block flex-vertical">
                 {{#each posRollMods.result }}
                 {{#if isInInactiveBlock}}
-                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-                tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                 {{/if}}
                 {{/each}}
                 {{#each negRollMods.result }}
                 {{#if isInInactiveBlock}}
-                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-                tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+                {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
                 {{/if}}
                 {{/each}}
               </div>
@@ -362,15 +326,13 @@
           <div class="roll-sheet-float-block roll-sheet-sub-block roll-effects-block flex-horizontal">
             {{#each posRollMods.after }}
             {{#unless isInInactiveBlock}}
-            {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-            tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+            {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"  }}
             {{/unless}}
             {{/each}}
             <span class="roll-mod-block-spacer mid-spacer"></span>
             {{#each negRollMods.after }}
             {{#unless isInInactiveBlock}}
-            {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-            tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM}}
+            {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
             {{/unless}}
             {{/each}}
           </div>
@@ -378,14 +340,12 @@
           <div class="roll-sheet-sub-block roll-effects-block inactive-mod-block flex-horizontal">
             {{#each posRollMods.after }}
             {{#if isInInactiveBlock}}
-            {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-            tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+            {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
             {{/if}}
             {{/each}}
             {{#each negRollMods.after }}
             {{#if isInInactiveBlock}}
-            {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" status=status sideString=sideString
-            tooltip=tooltip selectOptions=selectOptions isGM=@root.isGM }}
+            {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
             {{/if}}
             {{/each}}
           </div>
