--- a/scss/sheets/_roll-collab-sheet.scss
+++ b/scss/sheets/_roll-collab-sheet.scss
@@ -1571,6 +1571,8 @@
                 font-style: normal;
                 margin-left: 0;
                 position: unset;
+                left: unset;
+                right: unset;
                 height: 20px;
 
                 &.roll-sheet-select {
