SCSS refactor complete but broken

--- a/src/scss/core/_components.scss
+++ b/src/scss/core/_components.scss
@@ -5,4 +5,8 @@
   @import "../components/comps";
   @import "../components/buttons-toggles";
   @import "../components/dotlines";
+  @import "../components/clocks";
+  @import "../components/turf-block";
+  @import "../components/cohort-block";
+  @import "../components/accordian-block";
 }
