--- a/src/scss/sheets/_crew-playbook-sheet.scss
+++ b/src/scss/sheets/_crew-playbook-sheet.scss
@@ -4,7 +4,7 @@
   --turf-block-height: 125px;
   --turf-block-gap: 10px;
   max-height: 600px;
-  @import "../components/turf-block";
+  // @import "../components/turf-block";
 
   .turf-list {
       scale: 0.8;
