--- a/src/scss/sheets/_crew-sheet.scss
+++ b/src/scss/sheets/_crew-sheet.scss
@@ -116,7 +116,7 @@
           }
         }
 
-        .turf-list { @import "../components/turf-block" }
+        // .turf-list { @import "../components/turf-block" }
       }
     }
   }
