--- a/src/scss/sheets/_sheets.scss
+++ b/src/scss/sheets/_sheets.scss
@@ -27,7 +27,7 @@
     // max-height: calc(100% - var(--sheet-header-height));
 
     form {
-      @import "../core/globals";
+      // @import "../core/globals";
 
       justify-content: flex-start;
       max-height: 800px;
@@ -172,7 +172,7 @@
               gap: 0 5px;
 
               &, .half-panel {
-                @import "../components/cohort-block";
+                // @import "../components/cohort-block";
               }
             }
           }
@@ -233,7 +233,7 @@
       position: relative;
       pointer-events: none;
 
-      @import "../components/clocks";
+      // @import "../components/clocks";
 
       // .clock {
       //   top: 50%;
