--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,8 @@
-@import './core/normalize.scss';
+// @import './core/normalize.scss';
 
 // Utility imports
 @import './core/functions';
 @import './core/mixins';
-// @import './fonts';
 
 
 
@@ -36,6 +35,10 @@
   * {
     @import './core/vars';
     @import './core/components';
+    @import './core/globals';
+
+    // @import './components/clocks';
+    // @import "./components/accordian-block";
   }
 
   body.vtt.game.system-eunos-blades {
@@ -59,15 +62,11 @@
     }
 
     #blades-overlay {
-      @import "./core/reset";
-      @import "./core/globals";
       @import './overlay/blades-overlay';
     }
 
     #clocks-overlay {
       margin-top: toRem(4px);
-      @import "./core/reset";
-      @import "./core/globals";
       @import './components/clocks-overlay';
     }
 
@@ -88,7 +87,6 @@
     #navigation,
     #hotbar,
     #players {
-      @import "./core/reset";
 
       &,
       * {
@@ -105,10 +103,6 @@
       }
 
       #chat {
-        // background: rgba(255, 180, 0, 0.25) !important;
-
-        @import "./core/reset";
-        @import './core/globals';
 
         #chat-form { display: none }
         #chat-controls {
@@ -149,12 +143,8 @@
     }
 
     .app.window-app {
-      @import "./core/reset";
-      @import './core/globals';
-
       // General App Window Styles
       @import "./core/app";
-      @import "./components/accordian-block";
 
       // Third-Party Library Inputs
       // > TAGIFY
@@ -162,8 +152,6 @@
 
       // > TAGIFY CUSTOM CONFIG
       @import './tagify-custom';
-
-      @import './components/clocks';
 
 
 
@@ -204,11 +192,8 @@
 
         .editor-content {
           position: relative;
-          // width: calc(100% + (2 * var(--content-padding)));
-          // left: calc(-1 * var(--content-padding));
           padding-left: var(--content-padding);
           padding-right: var(--content-padding);
-          // @import './tinymce/tinymce-content';
         }
       }
 
@@ -217,14 +202,9 @@
       .editor.tinymce {
         position: relative;
         max-width: unset;
-        // width: calc(100% + (2 * var(--content-padding)));
         width: 100%;
-        // height: 100%;
         min-height: 100px;
 
-        .editor-content {
-          // @import './tinymce/tinymce-content';
-        }
       }
 
       &.sheet {
